workshop04/weatherapp-svc-deploy.yaml
kind: Service
apiVersion: v1
metadata:
  name: weatherapp-svc
spec:
  selector:
    name:  weatherapp
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapp-deployment
spec:
  selector:
    matchLabels:
      name: weatherapp
  template:
    metadata:
      labels:
        name: weatherapp
    spec:
      containers:
      - name: weaatherapp
        image: stackupiss/weather:v1
        ports:
        - containerPort: 3000
